secondfile/objects/Program_Tracking__c.object
<CustomObject>
    <description>This custom object is used to track an SP&apos;s participation in one or more Partner Exchange internal programs (e.g. trials, Controlled Intros, invitation-only initiatives, etc)</description>
    <fields>
        <fullName>APEX_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APEX Champion</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Programs_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accelerator_Vendor__c</fullName>
        <inlineHelpText>This field required only when Program Type = &quot;Accelerator Program&quot;</inlineHelpText>
        <label>Accelerator Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>BluLogix</fullName>
                </value>
                <value>
                    <fullName>Consultants 2 Go</fullName>
                </value>
                <value>
                    <fullName>EZTax</fullName>
                </value>
                <value>
                    <fullName>H2O Overgroup</fullName>
                </value>
                <value>
                    <fullName>Masterstream</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
                <value>
                    <fullName>Mobilogix</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Netrio</fullName>
                </value>
                <value>
                    <fullName>New Leaf Partners</fullName>
                </value>
                <value>
                    <fullName>Omniware</fullName>
                </value>
                <value>
                    <fullName>One_Bill</fullName>
                </value>
                <value>
                    <fullName>Performensation</fullName>
                </value>
                <value>
                    <fullName>Profitec</fullName>
                </value>
                <value>
                    <fullName>Rev.IO</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SalesReach</fullName>
                </value>
                <value>
                    <fullName>Sibson Consulting</fullName>
                </value>
                <value>
                    <fullName>SureTax</fullName>
                </value>
                <value>
                    <fullName>The VAR Advisor</fullName>
                </value>
                <value>
                    <fullName>Velocity</fullName>
                </value>
                <value>
                    <fullName>ADCom</fullName>
                    <isActive>false</isActive>
                    <label>ADCom</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Self</fullName>
                    <isActive>false</isActive>
                    <label>Self</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Internal_Programs_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Documentation_Sent_to_SP__c</fullName>
        <inlineHelpText>Date that program-related documentation was provided to the SP for this program</inlineHelpText>
        <label>Documentation Sent to SP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_of_SP_Partner_Champion__c</fullName>
        <label>Email of SP/Partner Champion</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaaS_Activities__c</fullName>
        <inlineHelpText>This field required only when a value is populated in the MaaS Vendor field.</inlineHelpText>
        <label>MaaS Activities</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MaaS_Vendor__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand/Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Event Support</fullName>
                </value>
                <value>
                    <fullName>Marketing_Video</fullName>
                    <label>Marketing Video</label>
                </value>
                <value>
                    <fullName>Prospect Intelligence</fullName>
                </value>
                <value>
                    <fullName>SEO</fullName>
                </value>
                <value>
                    <fullName>Social Campaign</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Website Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaaS_Vendor__c</fullName>
        <inlineHelpText>This field required only when Program Type = &quot;Marketing Enablers&quot; and  Program Name = &quot;Marketing as a Service&quot;</inlineHelpText>
        <label>MaaS Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultants to Go</fullName>
                </value>
                <value>
                    <fullName>DiscoverOrg</fullName>
                </value>
                <value>
                    <fullName>OMI</fullName>
                </value>
                <value>
                    <fullName>The Channel Company</fullName>
                </value>
                <value>
                    <fullName>Abstrakt</fullName>
                    <isActive>false</isActive>
                    <label>Abstrakt</label>
                </value>
                <value>
                    <fullName>Carve Digital</fullName>
                    <isActive>false</isActive>
                    <label>Carve Digital</label>
                </value>
                <value>
                    <fullName>Trial Vendor</fullName>
                    <isActive>false</isActive>
                    <label>Trial Vendor</label>
                </value>
                <value>
                    <fullName>UpTool</fullName>
                    <isActive>false</isActive>
                    <label>UpTool</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_SP_Partner_Champion__c</fullName>
        <inlineHelpText>Please provide the first and last name of the person that is the point of contact for involvement in this program/initiative. The person in question is employed by the SP/partner.  This is not an internal AT&amp;T person.</inlineHelpText>
        <label>Name of SP/Partner Champion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ADI SPIFF</fullName>
                </value>
                <value>
                    <fullName>AIA MPS - Business (Master Pricing Schedule)</fullName>
                </value>
                <value>
                    <fullName>AIA MPS - Consumer (Master Pricing Schedule)</fullName>
                </value>
                <value>
                    <fullName>Apple DEP</fullName>
                </value>
                <value>
                    <fullName>ASE Multi-End User Customer</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Control Center</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Wireless Internet</fullName>
                </value>
                <value>
                    <fullName>AVPN Aggregation</fullName>
                </value>
                <value>
                    <fullName>Billing &amp; Tax as a Service</fullName>
                </value>
                <value>
                    <fullName>Business Fiber</fullName>
                </value>
                <value>
                    <fullName>Control Center</fullName>
                </value>
                <value>
                    <fullName>Custom Contract</fullName>
                </value>
                <value>
                    <fullName>Direct Consumption</fullName>
                </value>
                <value>
                    <fullName>eCommerce &amp; CRM</fullName>
                </value>
                <value>
                    <fullName>EDI Billing</fullName>
                </value>
                <value>
                    <fullName>EOD/CCIP</fullName>
                </value>
                <value>
                    <fullName>E-Rate</fullName>
                </value>
                <value>
                    <fullName>IoT Contracts</fullName>
                </value>
                <value>
                    <fullName>IoT Readiness Assessment</fullName>
                </value>
                <value>
                    <fullName>Marketing_as_a_Service</fullName>
                </value>
                <value>
                    <fullName>Master Agent</fullName>
                </value>
                <value>
                    <fullName>Mobility API</fullName>
                </value>
                <value>
                    <fullName>MUBU</fullName>
                </value>
                <value>
                    <fullName>Multi Customer BAN</fullName>
                </value>
                <value>
                    <fullName>NetBond</fullName>
                </value>
                <value>
                    <fullName>NOC as a Service</fullName>
                </value>
                <value>
                    <fullName>Operational_Support_Services</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Provisioned_Date__c</fullName>
        <inlineHelpText>Optional Field.
This field can be used to indicate when the service needed for participation in this program was provisioned.</inlineHelpText>
        <label>Program Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerator_Program</fullName>
                </value>
                <value>
                    <fullName>Marketing Enablers</fullName>
                </value>
                <value>
                    <fullName>Platform -  Mobility</fullName>
                </value>
                <value>
                    <fullName>Product - Mobility</fullName>
                </value>
                <value>
                    <fullName>Product - Wireline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAO_Number_of_Agents__c</fullName>
        <inlineHelpText>This field available only when &apos;Program Name&apos; is &quot;Sub-Agent Optimization&quot;.</inlineHelpText>
        <label>SAO - Number of Agents</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 499</fullName>
                </value>
                <value>
                    <fullName>500 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAO_Percent_Agent_Sales__c</fullName>
        <inlineHelpText>This field available only when &apos;Program Name&apos; is &quot;Sub-Agent Optimization&quot;.</inlineHelpText>
        <label>SAO - Percent Agent Sales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 25 %</fullName>
                </value>
                <value>
                    <fullName>26 - 50 %</fullName>
                </value>
                <value>
                    <fullName>51 - 75 %</fullName>
                </value>
                <value>
                    <fullName>76 - 100 %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Agent_Optimization_Stage__c</fullName>
        <inlineHelpText>This field available only when &apos;Program Name&apos; is &quot;Sub-Agent Optimization&quot;.</inlineHelpText>
        <label>Sub-Agent Optimization Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recruit</fullName>
                </value>
                <value>
                    <fullName>Under Evaluation</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Tracking</label>
    <listViews>
        <fullName>Accelerator_Program_BaaS</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Accelerator_Vendor__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Billing &amp; Tax as a Service</value>
        </filters>
        <label>Accelerator Program - BaaS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accelerator_Program_NOC_as_a_Service</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Accelerator_Vendor__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>NOC as a Service</value>
        </filters>
        <label>Accelerator Program - NOC as a Service</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accelerator_Program_Other</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Accelerator_Vendor__c</columns>
        <columns>MaaS_Vendor__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>Accelerator Program - Other</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accelerator_Program_Pre_Sales_Automati</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Accelerator_Vendor__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Pre-Sales Automation</value>
        </filters>
        <label>Accelerator Program - Pre-Sales Automati</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accelerator_Program_Taxation_as_a_Serv</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Taxation as a Service</value>
        </filters>
        <label>Accelerator Program - Taxation as a Serv</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accelerator_Program_eCommerce_CRM</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Accelerator_Vendor__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Accelerator_Program</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>eCommerce &amp; CRM</value>
        </filters>
        <label>Accelerator Program - eCommerce &amp; CRM</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Program_Type__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Program Tracking Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Enablers_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>MaaS_Vendor__c</columns>
        <columns>MaaS_Activities__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Marketing Enablers</value>
        </filters>
        <label>Marketing Enablers - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Enablers_MaaS</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>MaaS_Vendor__c</columns>
        <columns>MaaS_Activities__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Marketing_as_a_Service</value>
        </filters>
        <label>Marketing Enablers - MaaS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Enablers_UpTool</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>MaaS_Vendor__c</columns>
        <columns>MaaS_Activities__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Marketing Enablers</value>
        </filters>
        <filters>
            <field>MaaS_Vendor__c</field>
            <operation>equals</operation>
            <value>UpTool</value>
        </filters>
        <label>Marketing Enablers - UpTool</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Mobility_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Platform -  Mobility</value>
        </filters>
        <label>Platform - Mobility - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Mobility_EDI_Billing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Documentation_Sent_to_SP__c</columns>
        <columns>Program_Provisioned_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Platform -  Mobility</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>EDI Billing</value>
        </filters>
        <label>Platform - Mobility - EDI Billing</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Mobility_MUBU</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Documentation_Sent_to_SP__c</columns>
        <columns>Program_Provisioned_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Platform -  Mobility</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>MUBU</value>
        </filters>
        <label>Platform - Mobility - MUBU</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Mobility_Phoenix</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Documentation_Sent_to_SP__c</columns>
        <columns>Program_Provisioned_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Platform -  Mobility</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <label>Platform - Mobility - Phoenix</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Mobility_Premier</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Program_Name__c</columns>
        <columns>APEX_Champion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Documentation_Sent_to_SP__c</columns>
        <columns>Program_Provisioned_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Type__c</field>
            <operation>equals</operation>
            <value>Platform -  Mobility</value>
        </filters>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>Premier</value>
        </filters>
        <label>Platform - Mobility - Premier</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Program Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>